--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
 
-    <string name="login_edt_email_tel">Teléfono o correo electrónico</string>
-    <string name="login_edt_password">Contraseña</string>
+    <string name="edt_email">Correo electrónico</string>
+    <string name="edt_password">Contraseña</string>
+    <string name="edt_confirmar_password">Confirmar contraseña</string>
     <string name="login_btn_iniciar_sesion">Iniciar sesión</string>
     <string name="login_tv_crearcuenta">Crear cuenta de MyChurch</string>
     <string name="login_tv_Olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
@@ -13,4 +14,7 @@
     <string name="login_contrase_a">Contraseña</string>
     <string name="login_loguearse_para_conectarse_con_nosotros">Loguearse para conectarse con nosotros</string>
     <string name="login_bienvenido">Bienvenido!</string>
+    <string name="btn_enscribirse">Enscribirse</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
